cmake_minimum_required(VERSION 3.10.0)
project(seminar_1 VERSION 0.1.0 LANGUAGES C CXX)

add_executable(seminar_1 main.cpp)

# BEGIN auto-add (gen_tasks_from_Test_pdf.sh)
add_executable(task_01 task_01.cpp)
add_executable(task_02 task_02.cpp)
add_executable(task_03 task_03.cpp)
add_executable(task_04 task_04.cpp)
add_executable(task_05 task_05.cpp)
add_executable(task_06 task_06.cpp)
add_executable(task_07 task_07.cpp)
add_executable(task_08 task_08.cpp)
add_executable(task_09 task_09.cpp)
add_executable(task_10 task_10.cpp)
add_executable(task_11 task_11.cpp)
add_executable(task_12 task_12.cpp)
add_executable(task_13 task_13.cpp)
add_executable(task_14 task_14.cpp)
add_executable(task_15 task_15.cpp)
add_executable(task_16 task_16.cpp)
add_executable(task_17 task_17.cpp)
add_executable(task_18 task_18.cpp)
add_executable(task_19 task_19.cpp)
add_executable(task_20 task_20.cpp)
add_executable(task_21 task_21.cpp)
add_executable(task_22 task_22.cpp)
add_executable(task_23 task_23.cpp)
add_executable(task_24 task_24.cpp)
add_executable(task_25 task_25.cpp)
add_executable(task_26 task_26.cpp)
add_executable(task_27 task_27.cpp)
add_executable(task_28 task_28.cpp)
add_executable(task_29 task_29.cpp)
add_executable(task_30 task_30.cpp)
add_executable(task_31 task_31.cpp)
add_executable(task_32 task_32.cpp)
add_executable(task_33 task_33.cpp)
add_executable(task_34 task_34.cpp)
add_executable(task_35 task_35.cpp)

